# isi-research

./: .gitignore  CNAME  Cargo.toml  JOURNEY.md  README.md  challenge.md  index.html  justfile  manifest.webmanifest  sw.js
.github/workflows/: release.yml
assets/: index-7Qxb6qFL.js  index-CRNI0J3D.js  index-CTEDzAbv.css  index-DKf6SAG_.js  index-ORGTj_3g.css
crates/isi-desktop/: Cargo.toml  Info.plist  README.md  package-lock.json  tauri.conf.json
crates/isi-desktop/capabilities/: default.json
crates/isi-desktop/icons/: generate_tray_icons.py  icon.icns
crates/isi-desktop/src/: clipboard.rs  config.rs  gemini.rs  lib.rs  main.rs  recording.rs
crates/isi-desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/isi-desktop/ui/src/: App.vue  main.ts  types.ts
crates/isi-desktop/ui/src/assets/styles/: main.css
crates/isi-desktop/ui/src/components/: AppSidebar.vue  FormField.vue  KeyBadge.vue  ModeCard.vue  ShortcutRecorder.vue  TextInput.vue  index.ts
crates/isi-desktop/ui/src/composables/: index.ts  useConfig.ts  useShortcut.ts  useWindow.ts
crates/isi-desktop/ui/src/router/: index.ts
crates/isi-desktop/ui/src/views/: AboutView.vue  HomeView.vue  ModeView.vue  SettingsView.vue
journey/: README.md
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/scripts/research/: isi-paper.typ  refs.bib  reproduce.ts
website/src/: App.vue  main.ts
website/src/components/: AboutSection.vue  AppFooter.vue  AppHeader.vue  DownloadSection.vue  HeroSection.vue  ResearchSection.vue
(+13 files in other folders)
